--- a/hobbies.html
+++ b/hobbies.html
@@ -31,13 +31,14 @@ href="style_1.css" />
 
 <section>
 <h4>My Hobbies</h4>
-<ul>
+<ul style="list-style-type:circle;">
 <li>Drawing</li>
 <li>Baking</li>
 <li>Writing</li>
 </ul>
 
-<h4>My Interest</h4>
+<h4>My Recent Interest</h4>
+<p>As of recently, I have been interested in learning Hospitality Management</p>
 
 
 <video controls autoplay loop>
@@ -51,5 +52,6 @@ href="style_1.css" />
 </body>
 
 <footer>Copyright: NUR AIRIN BINTI MOHD HELME</footer>
+
 
 </html>
