--- a/siblings.html
+++ b/siblings.html
@@ -29,12 +29,14 @@ href="style_1.css" />
 </nav>
 
 <section>
+	And this section is dedicated to my Siblings!! 
 <div class="image-gallery">
 <img title="SISTER 1" src="sis1_1.jpg" alt="Sister 1">
 <img title="SISTER 2" src="sis2_1.jpg" alt="Sister 2">
 <img title="BROTHER" src="brother_1.jpg" alt="Brother">
 </div>
 <center><caption>Nur Aini, Nur Azlin, Muhammad Nur Azri</caption>
+	Additionally, here is a special dedication to my Brother-in-Law
 <div class="image-gallery">
 <img title="BROTHER-IN-LAW" src="bil_1.jpg" alt="Brother-in-law">
 </div>
@@ -46,3 +48,4 @@ href="style_1.css" />
 
 
 </html>
+
