--- a/siblings.html
+++ b/siblings.html
@@ -35,7 +35,7 @@ href="style_1.css" />
 <img title="SISTER 2" src="sis2_1.jpg" alt="Sister 2">
 <img title="BROTHER" src="brother_1.jpg" alt="Brother">
 </div>
-<center><caption>Nur Aini, Nur Azlin, Muhammad Nur Azri</caption>
+<center><caption>Nur Aini, Nur Azlin, Muhammad Nur Azri</caption><br><br>
 	Additionally, here is a special dedication to my Brother-in-Law
 <div class="image-gallery">
 <img title="BROTHER-IN-LAW" src="bil_1.jpg" alt="Brother-in-law">
@@ -48,4 +48,5 @@ href="style_1.css" />
 
 
 </html>
+
 
