--- a/contact.html
+++ b/contact.html
@@ -65,17 +65,17 @@ color: white;
 }
 
 /*  Color variations */
-.blue-front { background-color: #3498db; }
-.blue-back  { background-color: #2980b9; }
+.blue-front { background-color: #1876f2; }
+.blue-back  { background-color: #1876f2; }
 
-.pink-front  { background-color: #e74c3c; }
-.pink-back   { background-color: #c0392b; }
+.pink-front  { background-color: #d93692; }
+.pink-back   { background-color: #d93692; }
 
-.green-front { background-color: #2ecc71; }
-.green-back  { background-color: #27ae60; }
+.green-front { background-color: #26eb36; }
+.green-back  { background-color: #26eb36; }
 
-.cyan-front { background-color: #2ecc71; }
-.cyan-back  { background-color: #27ae60; }
+.cyan-front { background-color: #0088cc; }
+.cyan-back  { background-color: #0088cc; }
 
 </style>
 </head>
@@ -141,5 +141,6 @@ color: white;
 
 </body>
 <footer>Copyright: NUR AIRIN BINTI MOHD HELME</footer>
+
 
 </html>
