--- a/about_me.html
+++ b/about_me.html
@@ -35,15 +35,13 @@ href="style_1.css" />
 <div class=:"grid-container; image-gallery">
 <img title="ME" src="me_2.jpg" alt="Me">
 <div class:"text-content">
-<p>
- My Full Name: Nur Airin binti Mohd Helme<br>
+<p>My Full Name: Nur Airin binti Mohd Helme<br>
  My Birthdate: 1st August 2005, 13:21<br>
  My Home: <a href="https://www.google.com/maps/place/22,+Jalan+Pinggiran+USJ+2%2F6,+Taman+Pinggiran+Usj,+47600+Subang+Jaya,+Selangor/@3.053207,101.5592182,656m/data=!3m2!1e3!4b1!4m6!3m5!1s0x31cc4d225f7a8df1:0x2d64e131d44cd0ce!8m2!3d3.0532016!4d101.5617931!16s%2Fg%2F11sg8bsmvh?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D">Home</a><br>
  My Favorite Color: &#129505 Red<br>
  My Favorite Food: &#127831 Chicken<br>
  My Favorite subject: English<br>
-	My Personality Type: ISFP
-</p>
+	My Personality Type: ISFP</p>
 </div>
 </div>
 
@@ -55,3 +53,4 @@ href="style_1.css" />
 
 
 </html>
+
