--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ href="style_1.css" />
 <p><b>HI! My name is Nur Airin binti Mohd Helme <br>
 Welcome to my Resume Form<br>
 Across the pages, you will find information regarding my personal life regarding my family members, education background, and  hobbies.<br>
-I hope you enjoy your time here&#128522</b></p>
+I hope you enjoy your time here &#128522</b></p>
     </div>
 </div>
 
 
 
-<audio autoplay loop>
+<audio controls autoplay loop>
 <source src="song2.mp3" type="audio/mpeg">
 </audio>
 
@@ -53,5 +53,6 @@ I hope you enjoy your time here&#128522</b></p>
 </body>
 
 <footer>Copyright: NUR AIRIN BINTI MOHD HELME</footer>
+
 
 </html>
