--- a/quotes.html
+++ b/quotes.html
@@ -103,7 +103,7 @@ margin-bottom: 50px;
       <img title="Carnation" src="carn.png" alt="Carnation Rose">
     </div>
     <div class="flip-card-back">
-      Back Side
+      Fear Everything And Run or Fear Everything And Rise
     </div>
   </div>
 </div>
@@ -113,7 +113,7 @@ margin-bottom: 50px;
       <img title="Rose" src="prose.png" alt="Rose">
     </div>
     <div class="flip-card-back">
-      Back Side
+      They say cats can be your best friends. That's why I have 11 
     </div>
   </div>
 </div>
@@ -124,7 +124,7 @@ margin-bottom: 50px;
       <img title="Lily of the Valley" src="lotv.png" alt="Lily of the Valley">
     </div>
     <div class="flip-card-back">
-      Back Side
+      Don't be afraid of being different, Be afraid of being the same as everyone else
     </div>
   </div>
 </div>
@@ -135,7 +135,7 @@ margin-bottom: 50px;
       <img title="Cherry Blossom" src="cb.png" alt="Cherry Blossom">
     </div>
     <div class="flip-card-back">
-      Back Side
+      Someone who makes you feel better when  you're sad is important
     </div>
   </div>
 </div>
@@ -144,5 +144,6 @@ margin-bottom: 50px;
 
 </body>
 <footer>Copyright: NUR AIRIN BINTI MOHD HELME</footer>
+
 
 </html>
