--- a/siblings.html
+++ b/siblings.html
@@ -29,7 +29,7 @@ href="style_1.css" />
 </nav>
 
 <section>
-	And this section is dedicated to my Siblings!! 
+	<center>And this section is dedicated to my Siblings!! 
 <div class="image-gallery">
 <img title="SISTER 1" src="sis1_1.jpg" alt="Sister 1">
 <img title="SISTER 2" src="sis2_1.jpg" alt="Sister 2">
@@ -40,7 +40,7 @@ href="style_1.css" />
 <div class="image-gallery">
 <img title="BROTHER-IN-LAW" src="bil_1.jpg" alt="Brother-in-law">
 </div>
-<center><caption>Muhammad Irfan bin Amiruddin</caption>
+<center><caption>Muhammad Irfan bin Amiruddin</caption></center>
 </section>
 </body>
 
@@ -48,5 +48,6 @@ href="style_1.css" />
 
 
 </html>
+
 
 
