--- a/family.html
+++ b/family.html
@@ -30,7 +30,7 @@ href="style_1.css" />
 </nav>
 
 <section >
-In this section, I will be focusing on my family members. Each part of them have their own different page, so feel free to check them out!
+<center>In this section, I will be focusing on my family members. Each part of them have their own different page, so feel free to check them out!
 <br>
 
 <br>
@@ -40,12 +40,13 @@ In this section, I will be focusing on my family members. Each part of them have
 <a href="siblings.html"><img title="Siblings" src="sibs_1.jpg" alt="Siblings"></a>
 <a href="pets.html"><img title="Cats" src="mummy.jpg" alt="Cats"></a>
 </div>
-
+</center>
 
 <br>
 </section>
 </body>
 
 <footer>Copyright: NUR AIRIN BINTI MOHD HELME</footer>
+
 
 </html>
