--- a/parents.html
+++ b/parents.html
@@ -31,7 +31,7 @@ href="style_1.css" />
 
 <section>
 	
-<center>This section is dedicated to my Parents. They just recently celebrated their 30th anniversary and are looking at more years together</center>
+<center>This section is dedicated to my Parents. They just recently celebrated their 30th anniversary and are looking at more years together
 <div class="image-gallery">
 <img title="MOM" src="mom_1.jpg" alt="Mom">
 <img title="DAD" src="dad_1.jpg" alt="Dad">
@@ -46,6 +46,7 @@ href="style_1.css" />
 
 
 </html>
+
 
 
 
