--- a/family.html
+++ b/family.html
@@ -30,14 +30,14 @@ href="style_1.css" />
 </nav>
 
 <section>
-<center>In this section, I will be focusing on my family members. Each part of them have their own different page, so feel free to check them out!
-<br>
-<br>
+<center>In this section, I will be focusing on my family members. Each part have their own different page, so feel free to check them out!!<br><br>
+
 <div class="image-gallery">
-<a href="parents.html"><img title="Parents" src="momdad_1.jpg" alt="Parents"></a>
-<a href="siblings.html"><img title="Siblings" src="sibs_1.jpg" alt="Siblings"></a>
-<a href="pets.html"><img title="Cats" src="mummy.jpg" alt="Cats"></a>
+<a href="parents.html"><img title="PARENTS" src="momdad_1.jpg" alt="Parents"></a>
+<a href="siblings.html"><img title="SIBLINGS" src="sibs_1.jpg" alt="Siblings"></a>
+<a href="pets.html"><img title="CATS" src="mummy.jpg" alt="Cats"></a>	
 </div>
+
 <br>
 </section>
 </body>
@@ -46,4 +46,5 @@ href="style_1.css" />
 
 
 </html>
+
 
