--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ href="style_1.css" />
     <div class="text-content">
 <p><b>HI! My name is Nur Airin binti Mohd Helme <br>
 Welcome to my Resume Form<br>
-Across the pages, you will find information regarding my personal life regarding my family members, education background, and  hobbies.<br>
+Across the pages, you will find information regarding my personal life regarding my family members, <br> education background, and  hobbies.<br>
 I hope you enjoy your time here &#128522</b></p>
     </div>
 </div>
@@ -56,3 +56,4 @@ I hope you enjoy your time here &#128522</b></p>
 
 
 </html>
+
