--- a/parents.html
+++ b/parents.html
@@ -30,14 +30,15 @@ href="style_1.css" />
 </nav>
 
 <section>
-	
-<center>This section is dedicated to my Parents. They just recently celebrated their 30th anniversary and are looking at more years together
+<center>This section is dedicated to my Parents. They just recently celebrated their 30th anniversary and are looking at more years together<br>
+
 <div class="image-gallery">
 <img title="MOM" src="mom_1.jpg" alt="Mom">
 <img title="DAD" src="dad_1.jpg" alt="Dad">
 <img title="PARENTS" src="momdad_2.jpg" alt="Parents">
 </div>
-<center><caption>Azura Mohd Don & Mohd Helme bin Mohd Helan</caption>
+
+<caption><b> Azura Mohd Don & MOhd Helme Mohd Helan</b></caption>
 
 </section>
 </body>
@@ -46,6 +47,7 @@ href="style_1.css" />
 
 
 </html>
+
 
 
 
