--- a/quotes.html
+++ b/quotes.html
@@ -103,7 +103,8 @@ margin-bottom: 50px;
       <img title="Carnation" src="carn.png" alt="Carnation Rose">
     </div>
     <div class="flip-card-back">
-      Fear Everything And Run or Fear Everything And Rise
+      FEAR has 2 meanings: <br>
+		Fear Everything And Run or Face Everything And Rise
     </div>
   </div>
 </div>
@@ -147,3 +148,4 @@ margin-bottom: 50px;
 
 
 </html>
+
