--- a/parents.html
+++ b/parents.html
@@ -42,12 +42,12 @@ This section is dedicated to my parents. They recently celebrated their 30th ann
 
     <div class="parent-card">
         <img src="mom_1.jpg" alt="Mother">
-        <h4>Azura Mohd Don</h4>
+        <h4>Azura binti Mohd Don</h4>
     </div>
 
     <div class="parent-card">
         <img src="dad_1.jpg" alt="Father">
-        <h4>Mohd Helme bin Mohd Helme</h4>
+        <h4>Mohd Helme bin Mohd Helan</h4>
     </div>
 </div>
 <div class="anniversary-box">
@@ -103,3 +103,4 @@ This section is dedicated to my parents. They recently celebrated their 30th ann
 
 
 </html>
+
