--- a/family.html
+++ b/family.html
@@ -68,7 +68,7 @@ href="family.css" />
 <img src="family_1.jpg" alt="Family">
 </div>
 <div class="person">
-<img src="family_2.heic" alt="Family">
+<img src="family_2.HEIC" alt="Family">
 </div>
 
 </div>
@@ -127,6 +127,7 @@ href="family.css" />
 </script>
 
 </body>
+
 
 
 </html>
