--- a/family.html
+++ b/family.html
@@ -68,7 +68,19 @@ href="family.css" />
 <img src="family_1.jpg" alt="Family">
 </div>
 <div class="person">
-<img src="family_2.HEIC" alt="Family">
+<img src="family_2.jpg" alt="Family">
+</div>
+<div class="person">
+<img src="family_3.jpg" alt="Family">
+</div>
+<div class="person">
+<img src="family_4.jpg" alt="Family">
+</div>
+<div class="person">
+<img src="family_5.jpg" alt="Family">
+</div>
+<div class="person">
+<img src="family_6.jpg" alt="Family">
 </div>
 
 </div>
@@ -131,3 +143,4 @@ href="family.css" />
 
 
 </html>
+
