--- a/about_me.html
+++ b/about_me.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css"
 href="style_1.css" />
-<title>HOME</title>
+<title>ABOUT ME</title>
 
 </head>
 
@@ -149,6 +149,7 @@ Here is a short introduction and some fun facts about me.
 </script>
 
 </body>
+
 
 
 </html>
